syntax = "proto3";

option go_package = "/proto";

package proto;

message User {
    string id = 1;
    string name = 2;
    int32 time = 3;
    bool active = 4;
}

message ChatMessage {
    string id = 1;
    User from = 2;
    string message = 3;
}


message Empty {}

message Connect {
    User user = 1;
    bool active = 2;
}

service ChittyChat {
    rpc CreateStream(Connect) returns (stream ChatMessage);
    rpc BroadcastMessage(ChatMessage) returns (Empty);
}

